Refactoring Mongo routes coz have some problem in delete and update in swagger api
